# movie-recommender-agent

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: llm_config.yaml  redis_config.py
src/config/agents/: movie_matcher.yaml  preference_analyst.yaml  recommendation_generator.yaml
src/config/tasks/: analyze_preferences.yaml  generate_recommendation.yaml  match_movies.yaml
src/crews/: recommender_crew.py
src/data_models/: retriver_input.py
src/db/: redis_vdb_builder.py
src/services/: cache_service.py  embeddings_service.py  llm_service.py  redis_service.py
src/tests/: ping_redis.py  test_redis_vdb.py
src/tools/: retriver_tool.py
src/utils/: data_utils.py  path_util.py  yaml_loader.py
