[tool.poetry]
name = "src"
version = "0.1.0"
description = "Collaborative Movie Recommendation System using Redis, and CrewAI"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
crewai = {extras = ["tools"], version = "^0.130.0"}
python-dotenv = "^1.0.1"
langchain-huggingface = "^0.3.0"
langchain-redis = "^0.2.2"
google-generativeai = "^0.8.5"
sentence-transformers = "^4.1.0"

[tool.poetry.scripts]
recommender = "src.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"